module VideoRental
  class RegularPrice
    require 'video_rental/default_price'
    include DefaultPrice

    def charge(days_rented)
      result = 2
      result += (days_rented - 2) * 1.5 if days_rented > 2
      result
    end

  end
end